# piecewise-polynomial

./: LICENSE  piecewise-polynomial.cabal
Numeric/: Polynomial.hs
Numeric/Interpolation/: ConstrainedSpline.hs  Linear.hs
Numeric/Polynomial/: Log.hs  Piecewise.hs
bench/: Makefile  bench.hs
